--- a/.prac1/first.html
+++ b/.prac1/first.html
@@ -1,9 +1,5 @@
 <!DOCTYPE html>
-<html><head>
-    <title>My First Webpage</title>
-</head>
-<body>
+<html>
     <h1>My First Webpage</h1>
     <p>It is glorious!</p>
-</body>
 </html>
