--- a/task2-7.html
+++ b/task2-7.html
@@ -2,7 +2,7 @@
 <html>
 <h2 style="color: blue">This level 2 title is blue</h2>
 <hr />
-<p style="font-size: 200%; text-align: right;">This paregraph has a font<br />
+<p style="font-size: 200%; text-align: right;">This paragraph has a font<br />
 twice as big as normal,<br />
 and is aligned right.
 </p><hr />
