--- a/valid.html
+++ b/valid.html
@@ -1,5 +1,8 @@
-<html>
-  <body>
+<!DOCTYPE html><html lang=en>
+  <head>
+<title>My awesome basic webpage</title>
+</head>
+<body>
     <h2>My awesome basic webpage</h2>
   </body>
 </html>
