--- a/task2-6.html
+++ b/task2-6.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html><html lang="en">
 <head><title>Hello World</title></head>
     <h1>This page is all about paragraphs!</h1>
-    <p>Check out this paragraph;<br />
-    it has a link to <a href=https://google.com>https://google.com</a>,<br />
-    and it spans<br />
-    more than 1 line</p><hr />
-    Have you ever used preformatted text?<br />
-    It allows you to make sweet ASCII drawings like this owl:<br />
+    <p>Check out this paragraph;<br>
+    it has a link to <a href=https://google.com>https://google.com</a>,<br>
+    and it spans<br>
+    more than 1 line</p><hr>
+    Have you ever used preformatted text?<br>
+    It allows you to make sweet ASCII drawings like this owl:<br>
     <pre>
 {o,o}
 ./)_)
