--- a/task2-7.html
+++ b/task2-7.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head><title>Hello World!</title></head>
 <h2 style="color: blue">This level 2 title is blue</h2>
-<hr />
-<p style="font-size: 200%; text-align: right;">This paragraph has a font<br />
-twice as big as normal,<br />
+<hr>
+<p style="font-size: 200%; text-align: right;">This paragraph has a font<br>
+twice as big as normal,<br>
 and is aligned right.
-</p><hr />
+</p><hr>
 <pre style="color: grey; text-align: center; font-family: cursive" title="I don't know why anyone would do this!">This grey preformatted text
 is styled in the cursive font family.
 It is also centered and has a tooltip that says:
