--- a/task2-4.html
+++ b/task2-4.html
@@ -3,7 +3,7 @@
     <title>Task2-4.html</title>
 </head>
 <body>
-    <p>This is a paragraph with <a href="a link to http://nyan.cat">a link to http://nyan.cat</a>, followed by some other text</p><br>
+    <p>This is a paragraph with <a href="http://nyan.cat">a link to http://nyan.cat</a>, followed by some other text</p><br>
     <p title="Wow! A tooltip.">This paragraph has a tooltip that says <i>"Wow! A tooltip."</i>.</p><br>
     <p title='This tooltip "has quotes in the middle" of it.'>This paragraph has a tooltip that says <i>This tooltip "has quotes in the middle" of it.</i></p>
 </body>
