--- a/task2-7.html
+++ b/task2-7.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head><title>Hello World!</title></head>
-<h2 style="color: blue">This level 2 title is blue</h2>
+<body><h2 style="color: blue">This level 2 title is blue</h2>
 <hr>
 <p style="font-size: 200%; text-align: right;">This paragraph has a font<br>
 twice as big as normal,<br>
@@ -11,4 +11,5 @@ and is aligned right.
 is styled in the cursive font family.
 It is also centered and has a tooltip that says:
 I don't know why anyone would do this!</pre>
+</body>
 </html>
