--- a/task1-1.html
+++ b/task1-1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>A page about lists and things!</title>
+    <title>Task1-1</title>
 </head>
 <body>
 <h1>
