--- a/task2-1.html
+++ b/task2-1.html
@@ -18,6 +18,7 @@
 
     mark {
         background-color: pink;
+        color: dimgrey;
     }
 
     del {
@@ -50,6 +51,6 @@
 <h2>
     Level 2 Headings are contred
 </h2>
-<p class="mono80">Performatted text uses the monospace font-family & is 80% normal size.</p>
+<pre class="mono80">Performatted text uses the monospace font-family & is 80% normal size.</pre>
 </body>
 </html>
