--- a/task2-2.html
+++ b/task2-2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Task2-2</title>
-    <link rel="stylesheet" href="task2-2.css">
+    <link rel="stylesheet" href="prac2.css">
 </head>
 <body>
 <h1>L1 Headings are Sans Serif</h1>
