--- a/task2-3.html
+++ b/task2-3.html
@@ -3,8 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <title>task2-3</title>
+    <link rel="stylesheet" href="prac2.css">
 </head>
 <body>
-
+<h1>
+    This is a L1 heading
+</h1>
+<hr>
+<h3>
+    Heading 3 text is dark blue but has an alpha value of 0.8
+</h3>
+<p>
+    To get the tight value, you need to convert the color name to a RGB value and then add the alpha channel.
+</p>
+<pre class="transparent-text">
+This preformatted text is semitransparent, because it belongs to a class named transparent-text, an rgba which uses an rgba value to make it black with 50% transparency.
+</pre>
+<br>
+<pre>
+This preformatted text is normal.
+</pre>
 </body>
 </html>
