--- a/task2-4.html
+++ b/task2-4.html
@@ -6,6 +6,14 @@
     <link rel="stylesheet" href="prac2.css">
 </head>
 <body>
-
+<h1>
+    Fancy background
+</h1>
+<p>
+    This page uses a titled image to create a pleasant background that's very quick to load.
+</p>
+<p>
+    The background color is #DCF5F5, and the image file is tiled on top.
+</p>
 </body>
 </html>
