--- a/task2-6.html
+++ b/task2-6.html
@@ -5,6 +5,11 @@
     <title>Task2-6</title>
 </head>
 <body>
-
+<h1>
+    Check out my borders
+</h1>
+<p>
+    We've modified the content div to have a 1px darkgrey 
+</p>
 </body>
 </html>
