--- a/task2-6.html
+++ b/task2-6.html
@@ -9,7 +9,10 @@
     Check out my borders
 </h1>
 <p>
-    We've modified the content div to have a 1px darkgrey 
+    We've modified the content div to have a 1px darkgrey border with rounded corners of an 8px radius.
+</p>
+<p>
+    Other elements can have borders too, <span class="red-border">like this span with the class red-border</span>
 </p>
 </body>
 </html>
