--- a/task2-6.html
+++ b/task2-6.html
@@ -12,7 +12,7 @@
     We've modified the content div to have a 1px darkgrey border with rounded corners of an 8px radius.
 </p>
 <p>
-    Other elements can have borders too, <span class="red-border">like this span with the class red-border</span>
+    Other elements can have borders too, <span class="redborder">like this span with the class red-border</span>
 </p>
 </body>
 </html>
