--- a/task2-6.html
+++ b/task2-6.html
@@ -3,16 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <title>Task2-6</title>
+    <link rel="stylesheet" href="prac2.css">
 </head>
 <body>
-<h1>
-    Check out my borders
-</h1>
-<p>
-    We've modified the content div to have a 1px darkgrey border with rounded corners of an 8px radius.
-</p>
-<p>
-    Other elements can have borders too, <span class="redborder">like this span with the class red-border</span>
-</p>
+<div id="content">
+    <h1>
+        Check out my borders
+    </h1>
+    <p>
+     We've modified the content div to have a 1px darkgrey border with rounded corners of an 8px radius.
+    </p>
+    <p>
+     Other elements can have borders too, <span class="redborder">like this span with the class red-border</span>.
+    </p>
+<hr>
+    <p>
+        You can change the color of horizontal rules by changing the border color;<br>
+        all horizontal rules are now #CFDFE4.
+    </p>
+    <p>
+        Alternately, <span class="red-outline">this span has a red outline (red-outline class).</span>
+    </p>
+</div>
 </body>
 </html>
