--- a/task2-6.html
+++ b/task2-6.html
@@ -22,7 +22,8 @@
         all horizontal rules are now #CFDFE4.
     </p>
     <p>
-        Alternately, <span class="red-outline">this span has a red outline (red-outline class).</span>
+        Alternately, <span class="red-outline">this span has a red outline (red-outline class).</span><br>
+        That prevents if from messing with the line height.
     </p>
 </div>
 </body>
