--- a/task2-6.html
+++ b/task2-6.html
@@ -26,5 +26,11 @@
         That prevents if from messing with the line height.
     </p>
 </div>
+<p>
+    Notice how the borders double up here:
+</p>
+<div>
+    This div has a red border
+</div>
 </body>
 </html>
