--- a/task2-6.html
+++ b/task2-6.html
@@ -29,8 +29,21 @@
 <p>
     Notice how the borders double up here:
 </p>
-<div>
+<div id="redborder">
     This div has a red border
 </div>
+<div id="blueborder">
+    This div has a blue border
+</div>
+<p>
+    Notice how this fixes the borders:
+</p>
+<div id="redborder-r8">
+    This div has a red border, expect on the botto, and 8px round top corners
+</div>
+<div class="blueborder-r8">
+    This div has a blue border, and 8px round bottom corners
+</div>
+
 </body>
 </html>
