--- a/task2-6.html
+++ b/task2-6.html
@@ -41,7 +41,7 @@
 <div id="redborder-r8">
     This div has a red border, expect on the botto, and 8px round top corners
 </div>
-<div class="blueborder-r8">
+<div id="blueborder-r8">
     This div has a blue border, and 8px round bottom corners
 </div>
 
