--- a/task2-7.html
+++ b/task2-7.html
@@ -24,9 +24,10 @@
     <div id="blue2">
         <div id="yellow2">
             A nested div<br>
-            The outer div has a top margin og 20px, but no<br>
+            The outer div has a top margin of 20px, but no<br>
             padding.<br>
             The inner div is centered<br>
+            The inner div has 12px padding<br>
             The inner div is 400px square with borders
         </div>
     </div>
