--- a/task2-8.html
+++ b/task2-8.html
@@ -34,10 +34,12 @@
         Check out the sweet social media icons below, using the fontawesome icon set.<br>
         They are colored #BFCFD4
     </p>
-    <hr id="BFCFD4">
-    <i class="fa-brands fa-facebook-f"></i>
-    <i class="fa-brands fa-twitter"></i>
-    <i class="fa-solid fa-share-nodes"></i>
+    <div id="BFCFD4">
+        <hr>
+        <i class="fa-brands fa-facebook-f"></i>
+        <i class="fa-brands fa-twitter"></i>
+        <i class="fa-solid fa-share-nodes"></i>
+    </div>
 </div>
 </body>
 </html>
