--- a/task2-8.html
+++ b/task2-8.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Raleway">
-    <link rel="stylesheet" href="https://kit.fontawesome.com/2188436c5f.css" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/2188436c5f.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="prac2.css">
     <title>Task2-8</title>
 </head>
