--- a/task2-8.html
+++ b/task2-8.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <link rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Raleway">
+    <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css?family=Noto Serif">
     <script src="https://kit.fontawesome.com/2188436c5f.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="prac2.css">
     <title>Task2-8</title>
@@ -24,9 +26,9 @@
         Similarly, the default font is now Noto Serif from Google Fonts.<br>
         Again, for this to not break previous pages, serif should still be present as a fallback.
     </p>
-    <p id="multi-line">
+    <blockquote id="multi-line">
         This multi-line quote from http://example.example also uses the Raleway font, and is dimgrey with a line-height of 1.5, word-spacing of 0.2em, and justified.
-    </p>
+    </blockquote>
     <h4>
         L4 Headings are Raleway, italic, underlined a normal font-weight
     </h4>
