--- a/task2-8.html
+++ b/task2-8.html
@@ -38,9 +38,9 @@
     </p>
     <hr>
     <div id="BFCFD4">
-        <i class="fa-brands fa-facebook-f"></i>
-        <i class="fa-brands fa-twitter"></i>
-        <i class="fa-solid fa-share-nodes"></i>
+        <i class="fa-brands fa-facebook-f fa-2x"></i>
+        <i class="fa-brands fa-twitter fa-2x"></i>
+        <i class="fa-solid fa-share-nodes fa-2x"></i>
     </div>
 </div>
 </body>
