--- a/task2-9.html
+++ b/task2-9.html
@@ -15,11 +15,11 @@
         <h1>
             Listomania
         </h1>
-        <ul id="bar">
-            <li><a href="#A Horizontal">A Horizontal</a></li>
-            <li><a href="#List Menu">List Menu</a></li>
-            <li><a href="#White on Darkgrey">White on Darkgrey</a></li>
-            <li><a href="#Darkgrey with Lightgrey Shadow">Darkgrey with Lightgrey Shadow</a></li>
+        <ul class="bar">
+            <li><a href="#">A Horizontal</a></li>
+            <li><a href="#">List Menu</a></li>
+            <li><a href="#">White on Darkgrey</a></li>
+            <li><a href="#">Darkgrey with Lightgrey Shadow</a></li>
         </ul>
         <ol>
             <li>An numbered list</li>
