--- a/task2-11.html
+++ b/task2-11.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Task2-11</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto Serif">
+    <script src="https://kit.fontawesome.com/2188436c5f.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="prac2.css">
 </head>
+
 <body>
-    
+    <div id="content">
+        <h1>
+            Layout like a lizard
+        </h1>
+    </div>
+    <div class="content">
+
+    </div>
 </body>
+
 </html>
