--- a/task2-11.html
+++ b/task2-11.html
@@ -16,8 +16,10 @@
             Layout like a lizard
         </h1>
     </div>
-    <div class="content">
-
+    <div class="floatleft">
+<h1>
+    This div is floated left
+</h1>
     </div>
 </body>
 
