--- a/task2-11.html
+++ b/task2-11.html
@@ -36,7 +36,7 @@
         </ul>
     </div>
     <div class="redbox">
-        
+        <p>The red box is 1000px wide by 100px high, and positioned 100px each from th e top and left of this box. Its overflow is hidden</p>
     </div>
 </body>
 
