--- a/task2-11.html
+++ b/task2-11.html
@@ -39,7 +39,7 @@
         <p>The red box is 1000px wide by 100px high, and positioned 100px each from th e top and left of this box. Its overflow is hidden.</p>
         <div class="redbox">
         </div>
-        
+        <p>The total width of this page is 600px</p>
     </div>
 </body>
 
