--- a/task2-11.html
+++ b/task2-11.html
@@ -36,13 +36,14 @@
         </ul>
     </div>
     <div class="rightbox">
-        <p>The red box is 1000px wide by 100px high, and positioned 100px each from th e top and left of this box. Its overflow is hidden.</p>
+        <p>The red box is 1000px wide by 100px high, and positioned 100px each from th e top and left of this box. Its
+            overflow is hidden.</p>
         <div class="redbox">
         </div>
         <p>The total width of this page is 600px.<br>
-        It is centered.<br>
-    There is 10x pf margin between the divs.<br>
-Both this and the left div are 400px tall.</p>
+            It is centered.<br>
+            There is 10x pf margin between the divs.<br>
+            Both this and the left div are 400px tall.</p>
     </div>
 </body>
 
