--- a/task1.html
+++ b/task1.html
@@ -10,10 +10,9 @@
     <hr>
     <p class="time_box">The time is:</p>
     <p id="current_time" class="time_box">THIS TEXT HERE</p>
-    <button type="button" onclick="document.getElementById('demo').innerHTML = Date()">
+    <button type="button" onclick="document.getElementById('current_time').innerHTML = Date()">
         Click here for the Date
     </button>
-    <p id="demo"></p>
 
 </body>
 
