--- a/task2-1.html
+++ b/task2-1.html
@@ -9,7 +9,7 @@
 
         <script>
             var p = document.getElementById("text")
-            p.innerHTML() = "It <strong>IS</strong> working";
+            p.innerHTML = "It <strong>IS</strong> working";
         </script>
     </body>
 </html>
