--- a/task3.html
+++ b/task3.html
@@ -13,7 +13,7 @@
 <body>
 
     <div id="main" class="container">
-        <button type="button" class="right">MENU</button>
+        <button type="button" class="right" onclick="fsMenu()">MENU</button>
         <h1>Part 3 - Javascript Playground</h1>
         <div id="mcount"></div>
 
@@ -39,7 +39,7 @@
     </div>
 
     <div id="menu" class="container" style="display:none;">
-        <button type="button" class="right">BACK</button>
+        <button type="button" class="right" onclick="fsMenu()">BACK</button>
         <p>&nbsp;</p>
         <span>Background Color:</span><input type="text">
     </div>
