--- a/task3.html
+++ b/task3.html
@@ -22,9 +22,9 @@
         <textarea id="input-content" rows="4" cols="60" placeholder="Type your text here..."></textarea>
         <br>
         <div class="controls left">
-            <input type="number" name="quantity" value="1" /><br>
-            <input type="radio" name="color" value="blue" /> Blue<br>
-            <input type="radio" name="color" value="red" /> Red<br>
+            <input type="number" name="quantity" value="1" id="number"/><br>
+            <input type="radio" name="color" value="blue" id="blue" /> Blue<br>
+            <input type="radio" name="color" value="red" id="red"/> Red<br>
             <button type="button" onclick="creatPost()">Post</button>
         </div>
         <div class="controls left">
