--- a/task3.html
+++ b/task3.html
@@ -29,8 +29,8 @@
         </div>
         <div class="controls left">
             <input type="range" name="visible" min="1" max="10" value="10" /><br>
-            <input type="checkbox" name="style" value="bold" id="Bold"/> Bold<br>
-            <input type="checkbox" name="style" value="italic" id="Italic"/> Italic<br>
+            <input type="checkbox" name="style" value="bold" id="B"/> Bold<br>
+            <input type="checkbox" name="style" value="italic" id="I"/> Italic<br>
             <select>
                 <option disabled selected value="-1">Choose a post to reply to</option>
             </select>
