--- a/public/index.html
+++ b/public/index.html
@@ -7,5 +7,19 @@
 <body>
     <h1>My Prac 4 Express Server</h1>
     <p id="lastTime"></p>
+
+    // 4.1
+<script>
+function loadDoc() {
+  const xhttp = new XMLHttpRequest();
+  xhttp.onload = function() {
+    document.getElementById("lastTime").innerHTML = this.responseText;
+  }
+  xhttp.open("GET", "/last.txt");
+  xhttp.send();
+}
+</script>
+
+
 </body>
 </html>
