--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <h1>My Prac 4 Express Server</h1>
     <p id="lastTime"></p>
 
-    // 4.1
+    <!-- // 4.1
 <script>
 function loadDoc() {
   const xhttp = new XMLHttpRequest();
@@ -18,7 +18,7 @@ function loadDoc() {
   xhttp.open("GET", "/last.txt");
   xhttp.send();
 }
-</script>
+</script> -->
 
 
 </body>
