--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>My Prac 4 Express Server</h1>
-    <p id="lastTime"></p>
+    <p id="lastTime" onload="loadTime()"></p>
 
 </body>
 </html>
