--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,6 @@
 <body>
     <h1>My Prac 4 Express Server</h1>
     <p id="lastTime" onload="loadTime()"></p>
-
+    <script src="../routes/index.js"></script>
 </body>
 </html>
