--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>My Prac 4 Express Server</title>
+    <script src="./javascripts/lastTime.js"></script>
 </head>
 <body>
     <h1>My Prac 4 Express Server</h1>
-    <p id="lastTime" onload="loadTime()"></p>
-    <script src="./javascripts/lastTime.js"></script>
+    <p id="lastTime" onload="loa"></p>
 </body>
 </html>
