--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>My Prac 4 Express Server</h1>
-    <p id="lastTime" onload="loa"></p>
+    <p id="lastTime" onload=""></p>
 </body>
 </html>
