--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
     <title>My Prac 4 Express Server</title>
     <script src="./javascripts/lastTime.js"></script>
 </head>
-<body>
+<body onload="lastTime()">
     <h1>My Prac 4 Express Server</h1>
-    <p id="lastTime" onload=""></p>
+    <p id="lastTime"></p>
 </body>
 </html>
