--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>My Prac 4 Express Server</title>
-    <script src="../routes/index.js"></script>
 </head>
 <body onload="lastTime()">
     <h1>My Prac 4 Express Server</h1>
     <p id="lastTime"></p>
 
-
+    <script src="./javascripts/lastTime.js"></script>
 </body>
 </html>
