--- a/public/color2.html
+++ b/public/color2.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>color2.html</title>
+    <title>${colorName}</title>
 </head>
-<body>
 
+<body>
+    <button type="button" onclick="changeColor()">Next color</button>
 </body>
+
 </html>
