--- a/public/color2.html
+++ b/public/color2.html
@@ -3,11 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>${colorName}</title>
+    <title>color2.html</title>
 </head>
 
 <body>
-    <button type="button" onclick="changeColor()">Next color</button>
+    <h1>${colorName}</h1>
+    <button type="button" onclick="changeColor()">Change color</button>
 </body>
 
 </html>
