--- a/public/color2.html
+++ b/public/color2.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <title>color2.html</title>
+    <script src="../routes/index.js"></script>
 </head>
 
 <body>
     <h1>${colorName}</h1>
     <button type="button" onclick="changeColor()">Change color</button>
 </body>
-
 </html>
