--- a/public/color2.html
+++ b/public/color2.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <h1 id="changeColor"></h1>
+    <h1 id="changeColor">1</h1>
     <button type="button" onclick="changeColor()">Change color</button>
 </body>
 </html>
