--- a/public/color2.html
+++ b/public/color2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>color2.html</title>
-    <script src="../routes/index.js"></script>
+    <script src="./javascripts/color2.js"></script>
 </head>
 
 <body>
