--- a/public/color2.html
+++ b/public/color2.html
@@ -9,6 +9,6 @@
 
 <body>
     <h1 id="changeColor">Init</h1>
-    <button type="button" onclick="ajaxChangeColor()">Change color</button>
+    <button type="button" onclick="changeColor()">Change color</button>
 </body>
 </html>
