--- a/public/color2.html
+++ b/public/color2.html
@@ -20,7 +20,7 @@
                     h1.style.color = color2.response;
                 }
             };
-            color2.open("GET", '/color.txt');
+            color2.open("GET", `color.html`);
             color2.send();
         }
         color();
