--- a/public/color2.html
+++ b/public/color2.html
@@ -4,11 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <title>color2.html</title>
+    <script src="../routes/index.js" defer></script>
 </head>
 
 <body>
     <h1 id="changeColor">Init</h1>
     <button type="button" onclick="color()">Change color</button>
+
 </body>
 
 </html>
