--- a/public/color2.html
+++ b/public/color2.html
@@ -7,9 +7,9 @@
     <script src="../routes/index.js" defer></script>
 </head>
 
-<body>
+<body oncload="changeColor()">
     <h1 id="changeColor">Init</h1>
-    <button type="button" onclick="color()">Change color</button>
+    <button type="button" onclick="changeColor()">Change color</button>
 
 </body>
 
