--- a/public/color2.html
+++ b/public/color2.html
@@ -18,7 +18,7 @@
                     document.getElementById("changeColor").innerHTML = this.responseText;
                 }
             };
-            xhttp.open("GET", "/color.txt", true);
+            xhttp.open("GET", "./color.txt", true);
             xhttp.send();
         }
     </script>
