--- a/public/color2.html
+++ b/public/color2.html
@@ -12,13 +12,13 @@
     <script>
         function changeColor() {
             let xhttp = new XMLHttpRequest();
-            xhttp.onload = function () {
+            xhttp.onreadystatechange = function () {
                 if (this.readyState == 4 && this.status == 200) {
                     document.getElementById("changeColor").style.color = this.responseText;
                     document.getElementById("changeColor").innerHTML = this.responseText;
                 }
             };
-            xhttp.open("GET", "./color.txt", true);
+            xhttp.open("GET", "/color.txt", true);
             xhttp.send();
         }
     </script>
