--- a/public/log2.html
+++ b/public/log2.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Document</title>
-</head>
-<body>
 
+<head>
+    <title>Log</title>
+</head>
+
+<body>
+    <ul>${Dates}</ul>
 </body>
+
 </html>
