--- a/public/site.html
+++ b/public/site.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>My AJAX Site</title>
+        <title>site</title>
     </head>
     <body>
         <h1>My AJAX Site</h1>
