--- a/public/gallery.html
+++ b/public/gallery.html
@@ -9,6 +9,6 @@
 <body onload="changeImage()">
     <img id="image" width="400" src="images/photo-1539154444419-e31272d30a31.jpg" alt="">
     <p id="description"></p>
-    <script src="../routes/index.js"></script>
+    <script src="./javascripts/changeDoge.js"></script>
 </body>
 </html>
