--- a/public/gallery.html
+++ b/public/gallery.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Images</title>
+    <title>gallery</title>
 </head>
 
 <body onload="changeImage()">
