--- a/public/gallery.html
+++ b/public/gallery.html
@@ -7,8 +7,8 @@
 </head>
 
 <body onload="changeImage()">
-    <img id="image" width="400" src="images/photo-1539154444419-e31272d30a31.jpg" alt="">
-    <p id="description"></p>
+    <img id="src" width="400" src="images/photo-1539154444419-e31272d30a31.jpg" alt="">
+    <p id="alt-text"></p>
     <script src="./javascripts/changeDoge.js"></script>
 </body>
 </html>
