--- a/public/gallery.html
+++ b/public/gallery.html
@@ -7,7 +7,7 @@
 </head>
 
 <body onload="changeImage()">
-    <img id="src" width="400" src="images/photo-1539154444419-e31272d30a31.jpg" alt="">
+    <img id="src" width="400" src=" " alt=" ">
     <p id="alt-text"></p>
     <script src="./javascripts/gallery.js"></script>
 </body>
