--- a/public/gallery.html
+++ b/public/gallery.html
@@ -9,6 +9,7 @@
 <body onload="changeImage()">
     <img id="src" width="400" src=" " alt=" ">
     <p id="alt-text"></p>
+    <script src="./javascripts/images.js"></script>
     <script src="./javascripts/gallery.js"></script>
 </body>
 
