--- a/public/gallery.html
+++ b/public/gallery.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <title>gallery</title>
+    <script src="./javascripts/images.js"></script>
 </head>
 
 <body onload="changeImage()">
-    <img id="src" width="400" src=" " alt=" ">
+
+    <img id="src" src=" " alt=" ">
     <p id="alt-text"></p>
-    <script src="./javascripts/images.js"></script>
     <script src="./javascripts/gallery.js"></script>
 </body>
 
