--- a/public/gallery.html
+++ b/public/gallery.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>gallery</title>
     <script src="./javascripts/gallery.js"></script>
+    <script src="./javascripts/images.js"></script>
 </head>
 
 <body onload="changeImage()">
