--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <h1>My Prac 4 Express Server</h1>
     <p id="lastTime"></p>
 
-    <script src="./javascripts/lastTime.js"></script>
+    <script src="javascripts/lastTime.js"></script>
 </body>
 
 </html>
