--- a/public/site.html
+++ b/public/site.html
@@ -14,7 +14,7 @@
     <main>
         <div id="content"></div>
     </main>
-    <script src="./javascripts/site.js"></script>
+    <script src="javascripts/site.js"></script>
 </body>
 
 </html>
