--- a/public/site.html
+++ b/public/site.html
@@ -10,7 +10,7 @@
     <h1>My AJAX Site</h1>
     <button type="button" id="contact" onclick="contact()">Contact</button>
     <button type="button" id="search" onclick="search()">Search</button>
-    <button type="button" id="about" onclick="abcout()">About</button>
+    <button type="button" id="about" onclick="about()">About</button>
     <main>
         <div id="content"></div>
     </main>
