--- a/public/gallery.html
+++ b/public/gallery.html
@@ -1,18 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <title>gallery</title>
-    <script src="./javascripts/gallery.js"></script>
-    <script src="./javascripts/images.js"></script>
+    <title>Images</title>
 </head>
-
 <body onload="changeImage()">
-
-    <img id="src" src=" " alt=" ">
-    <p id="alt-text"></p>
-
+    <img id="image" width="400" src="" alt="">
+    <p id="description"></p >
+    <script src="./javascripts/gallery.js"></script>
 </body>
-
 </html>
