--- a/public/gallery.html
+++ b/public/gallery.html
@@ -5,7 +5,7 @@
     <title>Images</title>
 </head>
 <body onload="changeImage()">
-    <img id="image" width="400" src="" alt="">
+    <img id="imageUri" width="400" src=" " alt="">
     <p id="description"></p >
     <script src="./javascripts/gallery.js"></script>
 </body>
