--- a/public/site.html
+++ b/public/site.html
@@ -8,13 +8,16 @@
 
 <body>
     <h1>My AJAX Site</h1>
+
     <button type="button" id="contact" onclick="contact()">Contact</button>
+
     <button type="button" id="search" onclick="search()">Search</button>
+
     <button type="button" id="about" onclick="about()">About</button>
-    <main>
-        <div id="content"></div>
-    </main>
-    <script src="javascripts/site.js"></script>
+
+    <div id="content"></div>
+
+    <script src="./javascripts/site.js"></script>
 </body>
 
 </html>
