--- a/prac6.html
+++ b/prac6.html
@@ -68,7 +68,7 @@
 
                     <h3>Salt or Pepper?</h3>
                     <!-- TASK 1.1 -->
-                    <p id="sp"></p>
+                    <p id="sp">{{ choose }}</p>
                     <button type="button" class="pure-button pure-u-1-4" onclick="vueinst.choose='Salt';">Salt</button>
                     <button type="button" class="pure-button pure-u-1-4"
                         onclick="vueinst.choose='Pepper!';">Pepper</button>
