--- a/prac6.html
+++ b/prac6.html
@@ -40,7 +40,7 @@
                 </nav>
             </header>
 
-            <div class="pad" id="ad">
+            <div class="pad" id="ad" v-if="show_ad">
                 <button type="button" class="pure-button" style="float:right;"
                     onclick="vueinst.show_ad = false;">close</button>
                 <img :src="special.url" :alt="special.name" onclick="vueinst.special=SPECIALS[Math.floor((Math.random() * 3))];" />
@@ -50,7 +50,7 @@
 
 
 
-            <main class="pure-g">
+            <main class="pure-g" v-if="!show_ad">
 
                 <div class="pad pure-u-2-3">
                     <div id="items">
