--- a/task2-8.html
+++ b/task2-8.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Raleway">
     <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css?family=Noto Serif">
+    href="https://fonts.googleapis.com/css?family=Noto+Serif">
     <script src="https://kit.fontawesome.com/2188436c5f.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="prac2.css">
     <title>Task2-8</title>
