--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
               <input type="text" id="actor-first-name" placeholder="First/Given Name" />
               <label for="actor-last-name">Last Name</label>
               <input type="text" id="actor-last-name" placeholder="First/Family Name" />
-              <button type="button" class="pure-button pure-button-primary">Add</button>
+              <button type="submit" class="pure-button pure-button-primary">Add</button>
           </fieldset>
         </form>
       </aside>
