--- a/part2/public/actors.html
+++ b/part2/public/actors.html
@@ -33,8 +33,8 @@
           </thead>
           <tbody>
               <tr>
-                  <td>Some</td>
-                  <td>Actor</td>
+                  <!-- <td>Some</td> -->
+                  <!-- <td>Actor</td> -->
               </tr>
           </tbody>
         </table>
